scroll down and gap is fixed XNFR-913

--- a/src/app/util/ai-chat-manager/ai-chat-manager.component.css
+++ b/src/app/util/ai-chat-manager/ai-chat-manager.component.css
@@ -234,7 +234,7 @@
       }
       .footer-icons {
         display: flex;
-        gap: 10px;
+        gap: 5px;
       }
       .footer-icon {
         width: 21px;
